# repo-research-mcp

./: AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-ghcr.yml
docs/: ADR-0001-purpose-and-scope.md  ADR-0002-search-fetch-contract.md  ADR-0003-gateway-integration.md  ADR-0004-repository-overview-tool.md  ADR-0005-list-files-tool.md  ARCHITECTURE.md  ROADMAP.md  SECURITY.md
src/repo_research_mcp/: __init__.py  allowlist.py  github_provider.py  ids.py  logging_config.py  models.py  research.py  server.py  settings.py
tests/: test_allowlist.py  test_ids.py  test_research.py  test_server.py
